styling goals page, fixing inconsistencies on tablet

--- a/src/sass/pages/goals.scss
+++ b/src/sass/pages/goals.scss
@@ -98,7 +98,7 @@
   box-sizing: border-box;
   flex-wrap: wrap;
   width: 100%;
-  background-color: #f9f9f9;
+  background-color: #fceed4;
   margin-top: 4em;
   margin-bottom: 1em;
   padding: 2em;
@@ -206,7 +206,6 @@
 .indicator-active {
   background-color: $light-blue;
   color: $white;
-  margin-top: 2em;
 }
 
 #completedGoals__container {
