--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -171,7 +171,7 @@ p {
 
 
 
-  
+
 
 
 .text-help {
@@ -568,7 +568,7 @@ option {
 
 @media screen and (max-width: 1300px) {
   .complimentsHead {
-    height: 7em;
+    height: 7.5em;
   }
 
   button {
@@ -597,6 +597,10 @@ option {
   body {
     font-size: 14px;
     overflow: auto;
+  }
+
+  .goals-button {
+    top: 5.5em;
   }
 
   #main__container,
